--- a/resources/sass/_post.scss
+++ b/resources/sass/_post.scss
@@ -19,5 +19,6 @@
     p code {
         @apply .px-4 .py-1 .text-lg .rounded-sm;
         background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+        overflow-wrap: break-word;
     }
 }
